# WorkBench

./: .gitignore  README.md  api.txt  note.md  pyproject.toml  requirements.txt
data/mas_rl/eval/: smoke2_predictions.jsonl  smoke_multi_predictions.jsonl  smoke_predictions.jsonl
data/results/_summary/: deepseek-v4-flash_shared_summary_2026-06-04_14-43-43.csv  deepseek-v4-flash_shared_summary_2026-06-04_15-39-39.csv  deepseek-v4-flash_single-agent_summary_2026-06-04_14-37-31.csv
data/results/analytics/: deepseek-v4-flash_multi-agent_all_2026-06-03_14-57-32.csv  deepseek-v4-flash_shared_all_2026-06-04_14-44-19.csv  deepseek-v4-flash_shared_all_2026-06-04_16-29-51.csv  deepseek-v4-flash_single-agent_all_2026-06-04_14-38-07.csv
data/results/calendar/: deepseek-v4-flash_multi-agent_all_2026-06-03_14-20-43.csv  (+5 more)
scripts/inference/: generate_mas_rl_architecture_results.py  generate_multi_agent_results.py
scripts/plotting/: plot_errors_per_template.py
src/MAS_RL/: README.md  __init__.py  api_executor.py  data.py  eval.py  policy.py  reward.py  schema.py  tokenizer_utils.py  train.py
src/data_generation/: data_generation_utils.py
src/evals/: utils.py
src/multi_agent/: __init__.py  base_agent.py  blackboard.py  multi_agent_runner.py  orchestrator.py  workers.py
src/tools/: analytics.py  calendar.py  company_directory.py  customer_relationship_manager.py  email.py  project_management.py
tests/tools/: test_analytics_tools.py  test_calendar_tools.py  test_customer_relationship_manager_tools.py  test_email_tools.py  test_helpers.py  test_project_management_tools.py
(+98 files in other folders)
